--- a/artikel.html
+++ b/artikel.html
@@ -107,7 +107,17 @@
 		        <!-- Top content -->
 		        <div class="top-content section-container" id="top-content">
 			        <div class="container">
-			            
+			            <div class="row">
+			                <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+			                	<h1 class="wow fadeIn"><strong>HOW TO?</strong></h1>
+			                	<div class="description wow fadeInLeft">
+			                		<p>
+			                			HOW TO (what i have done) 
+			                			<!--<a href="#"><strong>Article</strong></a>.-->
+			                		</p>
+			                	</div>
+			                </div>
+			            </div>
 			        </div>
 		        </div>
 		
