--- a/artikel.html
+++ b/artikel.html
@@ -112,7 +112,7 @@
 			                	<h1 class="wow fadeIn"><strong>HOW TO?</strong></h1>
 			                	<div class="description wow fadeInLeft">
 			                		<p>
-			                			HOW TO (what i have done) 
+			                			HOW TO (yang udah pernah ane lakuin) 
 			                			<!--<a href="#"><strong>Article</strong></a>.-->
 			                		</p>
 			                	</div>
@@ -121,6 +121,7 @@
 			        </div>
 		        </div>
 		
+				
 		    
 		        <!-- Footer -->
 		        <footer class="footer-container">
