--- a/artikel.html
+++ b/artikel.html
@@ -15,10 +15,10 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
-	<link rel="stylesheet" href="assets/css/animate.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="assets/css/media-queries.css">
+	<link rel="stylesheet" href="https://github.com/Mirza2839/mirza2839.github.io/blob/main/assets/css/jquery.mCustomScrollbar.min.css">
+	<link rel="stylesheet" href="https://github.com/Mirza2839/mirza2839.github.io/blob/main/assets/css/animate.css">
+	<link rel="stylesheet" href="https://github.com/Mirza2839/mirza2839.github.io/blob/main/assets/css/style.css">
+	<link rel="stylesheet" href="https://github.com/Mirza2839/mirza2839.github.io/blob/main/assets/css/media-queries.css">
 
 	<!-- Favicon and touch icons -->
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
