--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
           </script>
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
                   <div class="col-lg-6">
@@ -608,7 +608,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+           <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
                   <div class="col-lg-6">
@@ -632,7 +632,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+           <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
                   <div class="col-lg-6">
