--- a/index.html
+++ b/index.html
@@ -559,12 +559,12 @@
     <section id="testimonials" class="testimonials section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!--<div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
         <p>Berikut merupakan beberapa Testimoni dari client saya:</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!--<div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
@@ -680,7 +680,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-          </div>
+          <!--</div>
           <div class="swiper-pagination"></div>
         </div>
 
